test-output.log

> pantry-iq-landing@0.1.0 test:unit
> vitest --run


 RUN  v4.1.4 /Users/harry/Documents/git/pantry-iq-landing

 ❯ tests/unit/check-error.test.ts (0 test)
stderr | tests/unit/places-client.test.ts > Places Client - getDonationOpportunities > Cache hit - returns stored data > should return cached data if fresh (less than 30 days old)
Error in getDonationOpportunities: SyntaxError: Unexpected token 'o', "food_pantry,charity" is not valid JSON
    at JSON.parse (<anonymous>)
    at /Users/harry/Documents/git/pantry-iq-landing/lib/places/client.ts:123:38
    at Array.map (<anonymous>)
    at Module.getDonationOpportunities (/Users/harry/Documents/git/pantry-iq-landing/lib/places/client.ts:118:23)
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at /Users/harry/Documents/git/pantry-iq-landing/tests/unit/places-client.test.ts:94:22

stderr | tests/unit/places-client.test.ts > Places Client - getDonationOpportunities > Cache expiry - triggers refresh (30-day TTL) > should not refresh cache if fresher than 30 days
Error in getDonationOpportunities: SyntaxError: Unexpected token 'o', "food_bank" is not valid JSON
    at JSON.parse (<anonymous>)
    at /Users/harry/Documents/git/pantry-iq-landing/lib/places/client.ts:123:38
    at Array.map (<anonymous>)
    at Module.getDonationOpportunities (/Users/harry/Documents/git/pantry-iq-landing/lib/places/client.ts:118:23)
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at /Users/harry/Documents/git/pantry-iq-landing/tests/unit/places-client.test.ts:259:22

 ❯ tests/unit/places-client.test.ts (9 tests | 2 failed) 12ms
       × should return cached data if fresh (less than 30 days old) 7ms
       × should not refresh cache if fresher than 30 days 1ms
(node:43509) [MODULE_TYPELESS_PACKAGE_JSON] Warning: Module type of file:///Users/harry/Documents/git/pantry-iq-landing/scripts/generate-test-csv.ts is not specified and it doesn't parse as CommonJS.
Reparsing as ES module because module syntax was detected. This incurs a performance overhead.
To eliminate this warning, add "type": "module" to /Users/harry/Documents/git/pantry-iq-landing/package.json.
(Use `node --trace-warnings ...` to show where the warning was created)
(node:43553) [MODULE_TYPELESS_PACKAGE_JSON] Warning: Module type of file:///Users/harry/Documents/git/pantry-iq-landing/scripts/generate-test-csv.ts is not specified and it doesn't parse as CommonJS.
Reparsing as ES module because module syntax was detected. This incurs a performance overhead.
To eliminate this warning, add "type": "module" to /Users/harry/Documents/git/pantry-iq-landing/package.json.
(Use `node --trace-warnings ...` to show where the warning was created)
(node:43578) [MODULE_TYPELESS_PACKAGE_JSON] Warning: Module type of file:///Users/harry/Documents/git/pantry-iq-landing/scripts/generate-test-csv.ts is not specified and it doesn't parse as CommonJS.
Reparsing as ES module because module syntax was detected. This incurs a performance overhead.
To eliminate this warning, add "type": "module" to /Users/harry/Documents/git/pantry-iq-landing/package.json.
(Use `node --trace-warnings ...` to show where the warning was created)
(node:43603) [MODULE_TYPELESS_PACKAGE_JSON] Warning: Module type of file:///Users/harry/Documents/git/pantry-iq-landing/scripts/generate-test-csv.ts is not specified and it doesn't parse as CommonJS.
Reparsing as ES module because module syntax was detected. This incurs a performance overhead.
To eliminate this warning, add "type": "module" to /Users/harry/Documents/git/pantry-iq-landing/package.json.
(Use `node --trace-warnings ...` to show where the warning was created)
(node:43628) [MODULE_TYPELESS_PACKAGE_JSON] Warning: Module type of file:///Users/harry/Documents/git/pantry-iq-landing/scripts/generate-test-csv.ts is not specified and it doesn't parse as CommonJS.
Reparsing as ES module because module syntax was detected. This incurs a performance overhead.
To eliminate this warning, add "type": "module" to /Users/harry/Documents/git/pantry-iq-landing/package.json.
(Use `node --trace-warnings ...` to show where the warning was created)
(node:43656) [MODULE_TYPELESS_PACKAGE_JSON] Warning: Module type of file:///Users/harry/Documents/git/pantry-iq-landing/scripts/generate-test-csv.ts is not specified and it doesn't parse as CommonJS.
Reparsing as ES module because module syntax was detected. This incurs a performance overhead.
To eliminate this warning, add "type": "module" to /Users/harry/Documents/git/pantry-iq-landing/package.json.
(Use `node --trace-warnings ...` to show where the warning was created)
(node:43709) [MODULE_TYPELESS_PACKAGE_JSON] Warning: Module type of file:///Users/harry/Documents/git/pantry-iq-landing/scripts/generate-test-csv.ts is not specified and it doesn't parse as CommonJS.
Reparsing as ES module because module syntax was detected. This incurs a performance overhead.
To eliminate this warning, add "type": "module" to /Users/harry/Documents/git/pantry-iq-landing/package.json.
(Use `node --trace-warnings ...` to show where the warning was created)
Generated 20 transactions records to /Users/harry/Documents/git/pantry-iq-landing/tests/fixtures/test-output.csv
(node:43737) [MODULE_TYPELESS_PACKAGE_JSON] Warning: Module type of file:///Users/harry/Documents/git/pantry-iq-landing/scripts/generate-test-csv.ts is not specified and it doesn't parse as CommonJS.
Reparsing as ES module because module syntax was detected. This incurs a performance overhead.
To eliminate this warning, add "type": "module" to /Users/harry/Documents/git/pantry-iq-landing/package.json.
(Use `node --trace-warnings ...` to show where the warning was created)

⎯⎯⎯⎯⎯⎯ Failed Suites 1 ⎯⎯⎯⎯⎯⎯⎯

 FAIL  tests/unit/check-error.test.ts [ tests/unit/check-error.test.ts ]
Error: [vitest] No "default" export is defined on the "fs/promises" mock. Did you forget to return it from "vi.mock"?
If you need to partially mock a module, you can use "importOriginal" helper inside:

vi.mock(import("fs/promises"), async (importOriginal) => {
  const actual = await importOriginal()
  return {
    ...actual,
    // your mocked methods
  }
})

 ❯ app/api/csv/upload/route.ts:2:34
      1| import { NextRequest, NextResponse } from 'next/server'
      2| import { mkdir, writeFile } from 'fs/promises'
       |                                  ^
      3| import { join } from 'path'
      4| import { parseCSV } from '@/lib/csv/parser'
 ❯ tests/unit/check-error.test.ts:3:1

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[1/3]⎯


⎯⎯⎯⎯⎯⎯⎯ Failed Tests 2 ⎯⎯⎯⎯⎯⎯⎯

 FAIL  tests/unit/places-client.test.ts > Places Client - getDonationOpportunities > Cache hit - returns stored data > should return cached data if fresh (less than 30 days old)
AssertionError: expected [] to have a length of 2 but got +0

- Expected
+ Received

- 2
+ 0

 ❯ tests/unit/places-client.test.ts:96:22
     94|       const result = await getDonationOpportunities(locationId, zipCod…
     95|
     96|       expect(result).toHaveLength(2)
       |                      ^
     97|       expect(result[0]).toEqual({
     98|         orgName: 'Salvation Army Food Pantry',

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[2/3]⎯

 FAIL  tests/unit/places-client.test.ts > Places Client - getDonationOpportunities > Cache expiry - triggers refresh (30-day TTL) > should not refresh cache if fresher than 30 days
AssertionError: expected [] to have a length of 1 but got +0

- Expected
+ Received

- 1
+ 0

 ❯ tests/unit/places-client.test.ts:261:22
    259|       const result = await getDonationOpportunities(locationId, zipCod…
    260|
    261|       expect(result).toHaveLength(1)
       |                      ^
    262|       expect(result[0].orgName).toBe('Fresh Food Bank')
    263|

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[3/3]⎯


 Test Files  2 failed | 28 passed (30)
      Tests  2 failed | 1096 passed | 1 skipped (1099)
   Start at  15:45:14
   Duration  17.99s (transform 2.99s, setup 2.86s, import 8.26s, tests 34.40s, environment 24.60s)

